# Rape_OCR

./: .gitignore  CODEX.md  Howto.txt  README.md  bug_log.txt  build_docx_entry_exe.ps1  pyproject.toml  requirements.txt  run_docx_entry_gui.bat
configs/: ocr_models.json
configs/patterns/: ppk_rape.json  rural_rape.json
docs/: architecture.md  gui_freeze_incident_log.txt
models/paddleocr/: README.md
skills/commit-push-main/: SKILL.md
skills/engineering/: README.md
skills/engineering/bug-log/: SKILL.md
skills/engineering/debug-mantra/: SKILL.md
skills/engineering/explain-before-edit/: SKILL.md
skills/engineering/post-mortem/: SKILL.md
skills/engineering/scrutinize/: SKILL.md
skills/engineering/session-review/: SKILL.md
skills/productivity/: README.md
skills/productivity/management-talk/: SKILL.md
src/rape_ocr/: __init__.py  api.py  config.py  data_entry_launcher.py  data_entry_ui.py  dataset_reprocess.py  domain.py  export_mapping.py  main.py  ocr_service.py  recycling.py  storage.py  template_service.py  training.py  ui.py
tests/: __init__.py  test_anchor_crop.py  test_api.py  test_config.py  test_data_entry_ui.py  test_dataset_reprocess.py  test_export_mapping.py  test_ocr_engine.py  test_pattern_detection.py  test_ppk_config.py  test_recycling_cleanup.py  test_skip_fields.py  test_storage_recycling.py  test_template_service.py  test_template_service_prototype.py  test_training.py
