[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rape-ocr"
version = "0.1.0"
description = "Offline native OCR workflow for Thai forensic medical documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
app = [
    "opencv-python>=4.8",
    "PySide6>=6.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-docx>=1.1",
    "paddleocr>=2.8",
]
dev = [
]

[project.scripts]
rape-ocr = "rape_ocr.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
