[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rape-ocr"
version = "0.1.0"
description = "Offline native OCR workflow for Thai forensic medical documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
app = [
    "numpy<2.4,>=1.24",
    "opencv-python>=4.8",
    "PySide6>=6.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-docx>=1.1",
    "paddleocr>=2.8",
    "paddlepaddle==3.2.2",
]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
rape-ocr = "rape_ocr.main:main"
rape-docx-entry = "rape_ocr.data_entry_ui:run_data_entry_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
